# hiring-challenge

./: README.md  linkedin_posts.csv  main.py  pyproject.toml  test.py
