[project]
name = "hiring-challenge-data354"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify-client>=1.9.2",
    "beautifulsoup4>=4.13.3",
    "dotenv>=0.9.9",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.30.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
